<!--
  ~ Copyright (c) 2020.
  ~ Designed and developed by @quabynah_codelabs (Dennis Bilson)
  ~
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Swan</string>
    <string name="app_name__long">Swan - World of Luxury</string>
    <string name="app_desc__one">Let\'s Create Your Own Style</string>
    <string name="app_desc__two">Each woman has a unique style. We help you to create your very own style because you deserve to shine like a star</string>
    <string name="app_desc__three">Discover the world\'s top products right at the comfort of your home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get started</string>
    <string name="cd_image_welcome_page">Image on welcome page</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="or_with_email">Or with email</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="app_creator">Created with ❤️ for <b>My Subscribers</b></string>
</resources>